fix: use is collapsed property of sider

--- a/components/Layout/AppMenu/AppMenu.module.scss
+++ b/components/Layout/AppMenu/AppMenu.module.scss
@@ -35,4 +35,8 @@
         @extend .menuItemLabel;
         padding-right: 1rem;
     }
+
+    @media screen and (max-width: $media-md) {
+        justify-content: center;
+    }
 }
