--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -65,16 +65,6 @@ h1, h2, h3, h4, h5, h6 {
   h5 {
     color: white;
   }
-
-  @media screen and (max-width: $media-md) {
-    overflow: unset !important;
-  }
-}
-
-.ant-menu-item {
-  @media screen and (max-width: $media-md) {
-    padding-left: 28% !important;
-  }
 }
 
 .ant-list-item {
